@@ -20,6 +20,7 @@ Improvements
 - root hints are now loaded from a zonefile; exposed as hints.root_file().
   You can override the path by defining ROOTHINTS during compilation.
 - policy.FORWARD: work around resolvers adding unsigned NS records (#248)
+- reduce unneeded records previously put into authority in wildcarded answers
 
 
 Knot Resolver 1.3.3 (2017-08-09)
